--- a/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
+++ b/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
@@ -216,6 +216,15 @@ msgstr "Очень большой"
 msgid "Extrude"
 msgstr "Заправить"
 
+msgid "Later"
+msgstr "Позже"
+
+msgid "Print (Interrupt)"
+msgstr "Печать (Прервана)"
+
+msgid "Printing was interrupted\nDid you want to continue print?"
+msgstr "Печать была прервана\nВы хотите продолжить печать?"
+
 msgid "Extrusion +"
 msgstr "Экструзия +"
 
