Fix rus locale for refresh button

--- a/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
+++ b/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
@@ -686,7 +686,7 @@ msgid "Last Print Time"
 msgstr "Последняя печать"
 
 msgid "Refresh"
-msgstr "Обновить"
+msgstr "Проверить обновления"
 
 msgid "Rename/Move:"
 msgstr "Переименовать:"
