Добавлен параметр диаметра сопла

--- a/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
+++ b/ks_includes/locales/ru/LC_MESSAGES/KlipperScreen.po
@@ -352,6 +352,9 @@ msgstr "Скрыть"
 msgid "Hide sensors in Temp."
 msgstr "Скрыть датчики в Temp."
 
+msgid "Nozzle Diameter"
+msgstr "Диаметр сопла"
+
 msgid "Hide temp."
 msgstr "Скрыть температуру."
 
